# EdgeDetector

./: CMakeLists.txt  Image.cpp  LICENSE  README.md  gaussian.cpp  gaussian.h  main.cpp
include/: BMP.h  Image.h  Matrix.h  constants.h  gaussian.h  image_processing.h
src/: Image.cpp  gaussian.cpp  image_processing.cpp
